--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Jonghyun's Homepage"
 title_separator          : "-"
 name                     : &name "Jonghyun Park"
 description              : &description "PhD Candidate in Economics"
-url                      : https://jonghyun19.github.io/JHyun.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https:///JHyun.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
